src/test/deca/syntax/valid/created/prog_cours.deca
{
	int x = 1;
	int y = 2;
	int z = x;
}
