src/test/deca/syntax/invalid/created/plus-plus.deca
{
    int x = 1;
    x = x ++ 41;
    return x;
}
